webapp/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: maydaylabs-system
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: restricted
